--- a/templates/base.html
+++ b/templates/base.html
@@ -1,61 +1,152 @@
 <!doctype html>
-<html lang="ru">
+<html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-    <title>{% block title %}{% endblock %}</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+  <meta name="generator" content="Hugo 0.83.1">
+  <title>{% block title %}{% endblock %}</title>
+
+
+
+
+
+  <!-- Bootstrap core CSS -->
+  <link href="../static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    .bd-placeholder-img {
+      font-size: 1.125rem;
+      text-anchor: middle;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      user-select: none;
+    }
+
+    @media (min-width: 768px) {
+      .bd-placeholder-img-lg {
+        font-size: 3.5rem;
+      }
+    }
+  </style>
+  <style>
+    .nav-link,
+    .nav-item {
+      color: #333333 !important;
+      font-size: 0.9rem;
+    }
+
+    .nav-link:hover,
+    .nav-item:hover {
+      color: #ff8111 !important;
+      text-decoration: underline !important;
+    }
+  </style>
+
+
+  <!-- Custom styles for this template -->
+  <link href="../static/css/navbar-top-fixed.css" rel="stylesheet">
+
+
 </head>
+
 <body>
-    <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-      <h5 class="my-0 mr-md-auto font-weight-normal">МОЯ СЕМЬЯ</h5>
-      <nav class="my-2 my-md-0 mr-md-3">
-        <a class="p-2 text-dark" href="/">Главная</a>
-        <a class="p-2 text-dark" href="/about">Про нас</a>
-          <a class="p-2 text-dark" href="/posts">Статьи</a>
-        <a class="btn btn-warning" href="/create-article">Создать</a>
-        </nav>
+
+  <nav class="navbar px-4 navbar-expand-md navbar-light fixed-top bg-white">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/">
+        <img src="../static/img/logo/logo.svg" alt="logo" width="40" height="40">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+        aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav me-auto mb-2 mb-md-0 align-items-center">
+
+
+
+          <li class="nav-item">
+            <a class="nav-link" href="/">HOME</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/show_catalog">ДЕФЕКТЫ ПО ВИДАМ</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/show_operation">ДЕФЕКТЫ ПО ОПЕРАЦИЯМ</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">ДЕФЕКТЫ ПО ИЗДЕЛИЯМ</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/show">SHOW</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/add_catalog">ADD</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/add">ADD1</a>
+          </li>
+          <a class="nav-link" href="/1">1</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/upload">ЗАГРУЗИТЬ</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/user_profile">ПРОФИЛЬ</a>
+          </li>
+          <li class="nav-item position-absolute  end-0">
+            <a class="nav-link" href="/sign_in">ВОЙТИ</a>
+          </li>
+        </ul>
+
+      </div>
+
+
+
+
+
+
+
     </div>
-    {% block body %}{% endblock %}
-    <footer class="conteiner pt-4 my-md-5 pt-md-5 border-top">
+  </nav>
+
+  <main class="container-fluid">
     <div class="row">
-      <div class="col-12 col-md">
-        <img class="mb-2" src="/docs/4.5/assets/brand/bootstrap-solid.svg" alt="" width="24" height="24">
-        <small class="d-block mb-3 text-muted">© 2017-2020</small>
+      <div class="col-md-3">
+
+        <nav class="nav flex-column bg-light p-5 rounded">
+          <a class="nav-link active" aria-current="page" href="#">Active</a>
+          <a class="nav-link" href="#">Nav</a>
+          <a class="nav-link" href="#">Sidebar</a>
+          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        </nav>
+
       </div>
-      <div class="col-6 col-md">
-        <h5>Features</h5>
-        <ul class="list-unstyled text-small">
-          <li><a class="text-muted" href="#">Cool stuff</a></li>
-          <li><a class="text-muted" href="#">Random feature</a></li>
-          <li><a class="text-muted" href="#">Team feature</a></li>
-          <li><a class="text-muted" href="#">Stuff for developers</a></li>
-          <li><a class="text-muted" href="#">Another one</a></li>
-          <li><a class="text-muted" href="#">Last time</a></li>
-        </ul>
-      </div>
-      <div class="col-6 col-md">
-        <h5>Resources</h5>
-        <ul class="list-unstyled text-small">
-          <li><a class="text-muted" href="#">Resource</a></li>
-          <li><a class="text-muted" href="#">Resource name</a></li>
-          <li><a class="text-muted" href="#">Another resource</a></li>
-          <li><a class="text-muted" href="#">Final resource</a></li>
-        </ul>
-      </div>
-      <div class="col-6 col-md">
-        <h5>About</h5>
-        <ul class="list-unstyled text-small">
-          <li><a class="text-muted" href="#">Team</a></li>
-          <li><a class="text-muted" href="#">Locations</a></li>
-          <li><a class="text-muted" href="#">Privacy</a></li>
-          <li><a class="text-muted" href="#">Terms</a></li>
-        </ul>
+
+
+
+      <div class="col-md-9">
+
+        <div class="bg-light p-5 rounded">
+          <h1>Navbar example</h1>
+          <p class="lead" style="font-weight: 400; font-family: 'Noto Sans', sans-serif;    letter-spacing: 0.025em;">
+            This example is a quick exercise to illustrate how fixed to top navbar works. As you scroll, it
+            will remain fixed to the top of your browser’s viewport.</p>
+
+        </div>
+
       </div>
     </div>
-  </footer>
+
+
+  </main>
+
+
+  <script src="../static/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+
 </body>
+
 </html>
