create table show catalog.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,8 +34,7 @@
     }
   </style>
   <style>
-    .nav-link,
-    .nav-item {
+    .collapse a   {
       color: #333333 !important;
       font-size: 0.9rem;
     }
