--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
     }
 
 	.nav-link.active {
-      color: #ff8111 !important; //
+      color: #ff8111 !important; 
       font-size: 0.9rem;
 	  font-weight: 500;
 	}
