--- a/templates/show_catalog.html
+++ b/templates/show_catalog.html
@@ -9,118 +9,227 @@ Show_defect
 
 
 <style>
-  .row {
-    height: 85vh;
-}
-.scrollspy  {
-    height: 100%;
-}
-</style>
 
-<!-- container-fluid d-flex flex-column -->
+  .nav a   {
+    color: #333333 !important;
+  }
+</style>      
+      
 
-<!-- container-fluid-mt-5 px-4 -->
-
-
-    <div class="col-md-3" style="border:0.5px solid grey;">
-      <div class="scrollspy" data-mdb-spy="scroll" data-mdb-target=".list-group" data-mdb-offset="0"
-        style="position: relative;  height: 55vh; overflow: auto;">
-
-        <ul class="list-group">
-          <li class="list-group-item">
-            <a class="nav-link" href="/show_catalog">ВСЕ ДЕФЕКТЫ</a>
-          </li>
-          {% for i in defects  %}
-
-          <li class="list-group-item">
-            <a class="nav-link" href="/show_catalog/{{ i.id }}">{{ i.defect_name }},{{ i.id }}</a>
-          </li>
-        </ul>
-
-        {% endfor %}
-      </div>
-
-    </div>
+<div class="col">
+  <div class="scrollspy" data-mdb-spy="scroll" data-mdb-target=".list-group" data-mdb-offset="0"
+    style="position: relative;  height: calc(100vh - 25vh); overflow: auto;">
+    <nav class="nav flex-column  p-4" style="border: 1px solid green">
+      <a class="nav-link" href="/show_catalog"> ВСЕ ДЕФЕКТЫ </a>
+      {% for i in defects %}
+      <a class="nav-link" href="/show_catalog/{{ i.id }}"> {{ i.defect_name }},{{ i.id }} </a>
+      {% endfor %}
+    </nav>
+  </div>
+</div>
 {% endblock %}
 
 
 {% block main %}
 <style>
-  tr {
-   /* width: 100%;
-    display: inline-table;
-    height:60px;    */            // <-- the rows height 
-    }
-    
-    table{
-     height:300px;              // <-- Select the height of the table
-     display: -moz-groupbox;    // For firefox bad effect
-    }
-    tbody{
-      overflow-y: scroll;      
-      height: 700px;            //  <-- Select the height of the body
-      width: 100%;
-      position: absolute;
-    }  
- </style>
+  .table {
+    width: 100%;
+    table-layout: fixed;
+    border-collapse: collapse;
+    /*height: 80vh;*/
+  }
+
+  .table th {
+    border: 1px solid grey;
+    padding: 5px;
+    text-align: center
+      /*width: calc(100vw/8);*/
+  }
+
+  .table td {
+    border: 1px solid grey;
+    padding: 2px;
+    text-align: center;
+    /* width: calc(100vw/8); */
+
+  }
+
+  .table thead {
+    display: block;
+    position: relative;
+    width: calc(100%-16px) !important;
+  }
 
 
-    
+  .table tbody {
+    display: block;
+    overflow: auto;
+    width: 100%;
+    height: calc(100vh - 25vh);
+  }
+</style>
+
+<!--=======================================================================================-->
+
+<div class="table-responsive">
+  <table class="table table-hover table-fixed">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">#</th>
+        <th scope="col">Наименование изделия</th>
+        <th scope="col">Дефект</th>
+        <th scope="col">Операция</th>
+        <th scope="col">Фото</th>
+        <th scope="col">Комментарии</th>
+        <th scope="col">Расположение</th>
+      </tr>
+    </thead>
+
+    <tbody>
+
+      {% for i in catalog %}
+      <tr onclick="window.location.href='/catalog_list/{{ i[0].id }}'; return false">
+        <td><a href="/catalog_list/{{ i[0].id }}" type="button" class="btn btn-outline-secondary btn-sm "><svg
+              xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right"
+              viewBox="0 0 16 16">
+              <path
+                d="M6 12.796V3.204L11.481 8 6 12.796zm.659.753l5.48-4.796a1 1 0 0 0 0-1.506L6.66 2.451C6.011 1.885 5 2.345 5 3.204v9.592a1 1 0 0 0 1.659.753z" />
+            </svg></a></td>
+        <td><a href="/catalog_list/{{ i[0].id }}/update" type="submit" name="12" value="{{ i.id }}"
+            class="btn btn-outline-secondary btn-sm "><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+              fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
+              <path
+                d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5L13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175l-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z" />
+            </svg></button></td>
 
 
-      <div class="scrollspy" data-mdb-spy="scroll" data-mdb-target=".table table-hover table-sm" data-mdb-offset="0"
-      style="position: relative;">
-
-        <table class="table table-hover table-sm">
-          <thead >
-            <tr>
-              <th scope="col">#</th>
-              <th scope="col">#</th>
-              <!-- <th scope="col">Артикул</th> -->
-              <th scope="col">Наименование изделия</th>
-              <th scope="col">Дефект</th>
-              <th scope="col">Операция</th>
-              <th scope="col">Фото</th>
-              <th scope="col">Комментарии</th>
-              <th scope="col">Расположение</th>
+        <td>{{ i[0].product_name }}</td>
+        <td>{{ i[1] }}</td>
+        <td>{{ i[0].operation }}</td>
+        <td><img src="/{{ i[0].picture }}" class="img-thumbnail" alt="" style=" max-width: 30%;  height: auto;"></td>
+        <td>{{ i[0].note }}</td>
+        <td>{{ i[0].picture }}</td>
 
 
-            </tr>
-          </thead>
-          <tbody>
-            {% for i in catalog %}
-            <tr>
-              <th><a href="/catalog_list/{{ i[0].id }}" type="button" class="btn btn-outline-secondary btn-sm "><svg
-                    xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                    class="bi bi-caret-right" viewBox="0 0 16 16">
-                    <path
-                      d="M6 12.796V3.204L11.481 8 6 12.796zm.659.753l5.48-4.796a1 1 0 0 0 0-1.506L6.66 2.451C6.011 1.885 5 2.345 5 3.204v9.592a1 1 0 0 0 1.659.753z" />
-                  </svg></a></th>
-              <th><a href="/catalog_list/{{ i[0].id }}/update" type="submit" name="12" value="{{ i.id }}" class="btn btn-outline-secondary btn-sm "><svg
-                    xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil"
-                    viewBox="0 0 16 16">
-                    <path
-                      d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5L13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175l-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z" />
-                  </svg></button></th>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
 
-              
-              <td>{{ i[0].product_name }}</td>
-              <td>{{ i[1] }}</td>
-              <td>{{ i[0].operation }}</td>
-              <td><img src="/{{ i[0].picture }}" class="img-thumbnail" alt="" style=" max-width: 20%;  height: auto;"></td>
-              <td>{{ i[0].note }}</td>
-              <td>{{ i[0].picture }}</td>
-              
+</div>
 
-            </tr>
-            {% endfor %}
+<script>
 
-        </table>
+  let td = document.querySelectorAll('td'); //берем все td таблицы
+  for (var i = 0; i < 8; i++) {  // у нас 8 колонок. получаем номер колонки
+    let tdWidth = td[i].offsetWidth; // по номеру колонки получаем ее ширину
+    let th = document.querySelectorAll('th'); //берем все th заголовка таблицы
+    th[i].width = tdWidth; // присваиваем каждому th ширину td  тогоже номера
+  }
+  //let w = document.querySelectorAll('th');
+  //for (var i = 0; i < w.length; i++) {
+  //  console.log(w[i]);
 
-      </div>
+  //  let c = w[i].offsetWidth;
+  //  console.log('ширина th' + i, '=', c);
+  //}
 
-
-
-    
+</script>
 
 {% endblock %}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--            -->
+<!--              <tr onclick="window.location.href='#'; return false">-->
+<!--                <td>BEAUTIFUL FUTURE</td>-->
+<!--                <td>SUCCESS,SUCCESS, SUCCESS</td>-->
+<!--                <td>LUCK, LUCK, LUCK</td>-->
+<!--                <td>SUNSHINE</td>-->
+<!--                <td>PLEASURE</td>-->
+<!--                <td>LOVE,LOVE,LOVE,LOVE,LOVE,LOVE,LOVE,LOVE</td>-->
+<!--              </tr>-->
+<!--              <tr onclick="window.location.href='#'; return false">-->
+<!--                <td>BEAUTIFUL FUTURE</td>-->
+<!--                <td>SUCCESS,SUCCESS, SUCCESS</td>-->
+<!--                <td>LUCK, LUCK, LUCK</td>-->
+<!--                <td>SUNSHINE</td>-->
+<!--                <td>PLEASURE</td>-->
+<!--                <td>LOVE,LOVE,LOVE,LOVE,LOVE,LOVE,LOVE,LOVE</td>-->
+<!--              </tr>-->
+
+
+
+
+
+<!--=======================================================================================-->
+
+
+
+<!--      <div class="scrollspy" data-mdb-spy="scroll" data-mdb-target=".table table-hover table-sm" data-mdb-offset="0"-->
+<!--      style="position: relative;">-->
+
+<!--        <table class="table table-hover table-sm">-->
+<!--          <thead >-->
+<!--            <tr>-->
+<!--              <th scope="col">#</th>-->
+<!--              <th scope="col">#</th>-->
+<!--              &lt;!&ndash; <th scope="col">Артикул</th> &ndash;&gt;-->
+<!--              <th scope="col">Наименование изделия</th>-->
+<!--              <th scope="col">Дефект</th>-->
+<!--              <th scope="col">Операция</th>-->
+<!--              <th scope="col">Фото</th>-->
+<!--              <th scope="col">Комментарии</th>-->
+<!--              <th scope="col">Расположение</th>-->
+
+
+<!--            </tr>-->
+<!--          </thead>-->
+<!--          <tbody>-->
+<!--            {% for i in catalog %}-->
+<!--            <tr>-->
+<!--              <th><a href="/catalog_list/{{ i[0].id }}" type="button" class="btn btn-outline-secondary btn-sm "><svg-->
+<!--                    xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"-->
+<!--                    class="bi bi-caret-right" viewBox="0 0 16 16">-->
+<!--                    <path-->
+<!--                      d="M6 12.796V3.204L11.481 8 6 12.796zm.659.753l5.48-4.796a1 1 0 0 0 0-1.506L6.66 2.451C6.011 1.885 5 2.345 5 3.204v9.592a1 1 0 0 0 1.659.753z" />-->
+<!--                  </svg></a></th>-->
+<!--              <th><a href="/catalog_list/{{ i[0].id }}/update" type="submit" name="12" value="{{ i.id }}" class="btn btn-outline-secondary btn-sm "><svg-->
+<!--                    xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil"-->
+<!--                    viewBox="0 0 16 16">-->
+<!--                    <path-->
+<!--                      d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5L13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175l-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z" />-->
+<!--                  </svg></button></th>-->
+
+<!--              -->
+<!--              <td>{{ i[0].product_name }}</td>-->
+<!--              <td>{{ i[1] }}</td>-->
+<!--              <td>{{ i[0].operation }}</td>-->
+<!--              <td><img src="/{{ i[0].picture }}" class="img-thumbnail" alt="" style=" max-width: 20%;  height: auto;"></td>-->
+<!--              <td>{{ i[0].note }}</td>-->
+<!--              <td>{{ i[0].picture }}</td>-->
+<!--              -->
+
+<!--            </tr>-->
+<!--            {% endfor %}-->
+
+<!--        </table>-->
+
+<!--      </div>-->
+
+
+
+<!--    -->
