--- a/templates/show_catalog.html
+++ b/templates/show_catalog.html
@@ -7,20 +7,40 @@ Show_defect
 
 {% block nav %}
 
-<link href="../static/css/table.css" rel="stylesheet">
+<!-- <link href="../static/css/table.css" rel="stylesheet"> -->
 
 <style>
-
-  .nav a   {
+  .nav a {
     color: #333333 !important;
   }
-</style>      
-      
+</style>
+<style><!-- Стиль фиксации шапки таблицы -->
+  .tableFixHead {
+    overflow-y: auto;
+    height: 85vh;
+  }
+
+  .tableFixHead thead th {
+    position: sticky;
+    top: 0;
+  }
+
+  /* Just common table stuff. Really. */
+  .table {
+    border-collapse: collapse;
+    width: 95%;
+  }
+
+  /*th, td { padding: 8px 16px; }*/
+  th {
+    background: #fff !important;
+  }
+</style>
 
 <div class="col">
   <div class="scrollspy" data-mdb-spy="scroll" data-mdb-target=".list-group" data-mdb-offset="0"
     style="position: relative;  height: calc(100vh - 25vh); overflow: auto;">
-    <nav class="nav flex-column  p-4" style="border: 1px solid green">
+    <nav class="nav flex-column  p-4">
       <a class="nav-link" href="/show_catalog"> ВСЕ ДЕФЕКТЫ </a>
       {% for i in defects %}
       <a class="nav-link" href="/show_catalog/{{ i.id }}"> {{ i.defect_name }},{{ i.id }} </a>
@@ -35,47 +55,40 @@ Show_defect
 
 <!--=======================================================================================-->
 
-<div class="scroll" id="scr-01">
-          <table class="table table-fixed" id="tbl-head">
-            <thead>
-              <tr>
- {% for i in table_head %}
+<div class="tableFixHead">
+  <table class="table table-fixed table-hover">
+    <thead>
+      <tr>
+        {% for i in table_head %}
         <th scope="col">{{ i }}</th>
- {% endfor %}
+        {% endfor %}
+      </tr>
+    </thead>
 
-            </thead>
+    <tbody>
 
-          </table>
-</div>
-
-
-
-<div class="scroll" id="scr-02">
-          <table class="table table-fixed table-hover" id="tbl-body">
-            <tbody>
-
-{% for i in catalog %}
+      {% for i in catalog %}
       <tr onclick="window.location.href='/catalog_list/{{ i[0].id }}'; return false">
-        <td><a href="/catalog_list/{{ i[0].id }}" type="button" class="btn btn-outline-secondary btn-sm "><svg
-              xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right"
-              viewBox="0 0 16 16">
-              <path
-                d="M6 12.796V3.204L11.481 8 6 12.796zm.659.753l5.48-4.796a1 1 0 0 0 0-1.506L6.66 2.451C6.011 1.885 5 2.345 5 3.204v9.592a1 1 0 0 0 1.659.753z" />
-            </svg></a></td>
-        <td><a href="/catalog_list/{{ i[0].id }}/update" type="submit" name="12" value="{{ i.id }}"
-            class="btn btn-outline-secondary btn-sm "><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-              fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
-              <path
-                d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5L13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175l-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z" />
-            </svg></button></td>
+        <!-- <td><a href="/catalog_list/{{ i[0].id }}" type="button" class="btn btn-outline-secondary btn-sm "><svg -->
+        <!-- xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right" -->
+        <!-- viewBox="0 0 16 16"> -->
+        <!-- <path -->
+        <!-- d="M6 12.796V3.204L11.481 8 6 12.796zm.659.753l5.48-4.796a1 1 0 0 0 0-1.506L6.66 2.451C6.011 1.885 5 2.345 5 3.204v9.592a1 1 0 0 0 1.659.753z" /> -->
+        <!-- </svg></a></td> -->
+        <!-- <td><a href="/catalog_list/{{ i[0].id }}/update" type="submit" name="12" value="{{ i.id }}" -->
+        <!-- class="btn btn-outline-secondary btn-sm "><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" -->
+        <!-- fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16"> -->
+        <!-- <path -->
+        <!-- d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5L13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175l-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z" /> -->
+        <!-- </svg></button></td> -->
 
 
         <td>{{ i[0].product_name }}</td>
         <td>{{ i[1] }}</td>
         <td>{{ i[0].operation }}</td>
-        <td><img src="/{{ i[0].picture }}" class="img-thumbnail" alt="" style=" max-width: 30%;  height: auto;"></td>
         <td>{{ i[0].note }}</td>
-        <td>{{ i[0].picture }}</td>
+        <td style="width:10%"><img src="/{{ i[0].picture }}" class="img-thumbnail" alt="" style=" max-width: 100%;  height: auto;"></td>
+        <!-- <td>{{ i[0].picture }}</td> -->
 
 
       </tr>
@@ -83,116 +96,21 @@ Show_defect
 
 
 
-            </tbody>
+    </tbody>
 
-          </table>
-        </div>
-
-
+  </table>
+</div>
 
 
 
 
-   
 
-<script src="../static/js/table.js"></script>
+
+
+
+<!-- <script src="../static/js/table.js"></script> -->
 <script>
 
 </script>
 
 {% endblock %}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!--            -->
-<!--              <tr onclick="window.location.href='#'; return false">-->
-<!--                <td>BEAUTIFUL FUTURE</td>-->
-<!--                <td>SUCCESS,SUCCESS, SUCCESS</td>-->
-<!--                <td>LUCK, LUCK, LUCK</td>-->
-<!--                <td>SUNSHINE</td>-->
-<!--                <td>PLEASURE</td>-->
-<!--                <td>LOVE,LOVE,LOVE,LOVE,LOVE,LOVE,LOVE,LOVE</td>-->
-<!--              </tr>-->
-<!--              <tr onclick="window.location.href='#'; return false">-->
-<!--                <td>BEAUTIFUL FUTURE</td>-->
-<!--                <td>SUCCESS,SUCCESS, SUCCESS</td>-->
-<!--                <td>LUCK, LUCK, LUCK</td>-->
-<!--                <td>SUNSHINE</td>-->
-<!--                <td>PLEASURE</td>-->
-<!--                <td>LOVE,LOVE,LOVE,LOVE,LOVE,LOVE,LOVE,LOVE</td>-->
-<!--              </tr>-->
-
-
-
-
-
-<!--=======================================================================================-->
-
-
-
-<!--      <div class="scrollspy" data-mdb-spy="scroll" data-mdb-target=".table table-hover table-sm" data-mdb-offset="0"-->
-<!--      style="position: relative;">-->
-
-<!--        <table class="table table-hover table-sm">-->
-<!--          <thead >-->
-<!--            <tr>-->
-<!--              <th scope="col">#</th>-->
-<!--              <th scope="col">#</th>-->
-<!--              &lt;!&ndash; <th scope="col">Артикул</th> &ndash;&gt;-->
-<!--              <th scope="col">Наименование изделия</th>-->
-<!--              <th scope="col">Дефект</th>-->
-<!--              <th scope="col">Операция</th>-->
-<!--              <th scope="col">Фото</th>-->
-<!--              <th scope="col">Комментарии</th>-->
-<!--              <th scope="col">Расположение</th>-->
-
-
-<!--            </tr>-->
-<!--          </thead>-->
-<!--          <tbody>-->
-<!--            {% for i in catalog %}-->
-<!--            <tr>-->
-<!--              <th><a href="/catalog_list/{{ i[0].id }}" type="button" class="btn btn-outline-secondary btn-sm "><svg-->
-<!--                    xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"-->
-<!--                    class="bi bi-caret-right" viewBox="0 0 16 16">-->
-<!--                    <path-->
-<!--                      d="M6 12.796V3.204L11.481 8 6 12.796zm.659.753l5.48-4.796a1 1 0 0 0 0-1.506L6.66 2.451C6.011 1.885 5 2.345 5 3.204v9.592a1 1 0 0 0 1.659.753z" />-->
-<!--                  </svg></a></th>-->
-<!--              <th><a href="/catalog_list/{{ i[0].id }}/update" type="submit" name="12" value="{{ i.id }}" class="btn btn-outline-secondary btn-sm "><svg-->
-<!--                    xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil"-->
-<!--                    viewBox="0 0 16 16">-->
-<!--                    <path-->
-<!--                      d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5L13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175l-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z" />-->
-<!--                  </svg></button></th>-->
-
-<!--              -->
-<!--              <td>{{ i[0].product_name }}</td>-->
-<!--              <td>{{ i[1] }}</td>-->
-<!--              <td>{{ i[0].operation }}</td>-->
-<!--              <td><img src="/{{ i[0].picture }}" class="img-thumbnail" alt="" style=" max-width: 20%;  height: auto;"></td>-->
-<!--              <td>{{ i[0].note }}</td>-->
-<!--              <td>{{ i[0].picture }}</td>-->
-<!--              -->
-
-<!--            </tr>-->
-<!--            {% endfor %}-->
-
-<!--        </table>-->
-
-<!--      </div>-->
-
-
-
-<!--    -->
