--- a/templates/add_defect.html
+++ b/templates/add_defect.html
@@ -1,4 +1,4 @@
-{% extends 'base1.html' %}
+{% extends 'base.html' %}
 
 
 {% block title %}
@@ -6,12 +6,11 @@ Add
 {% endblock %}
 
 
-{% block body %}
+{% block main %}
 
 
 <!------------------------------------------------------------------------------->
-<div class="container-fluid-mt-5 px-4">
- <div class="row" style="background-color: #f1f1f1; border:1px solid red; height:100vh">
+
         <div class="col-md-9">
             <div class="form-group">
                 <h2>Введите наименование дефекта</h2>
@@ -29,7 +28,7 @@ Add
                         placeholder="Введите наименование дефекта"><br>
 
 
-                    <input type="submit" class="btn btn-primary" value="Отправить">
+                    <input type="submit" class="btn btn-outline-secondary" value="Отправить">
 
                 </form>
 
@@ -41,10 +40,7 @@ Add
 
 
         </div>
-    </div>
-</div>
-
-</div>
+ 
 <!------------------------------------------------------------------------------->
 
 
