--- a/templates/add_operation.html
+++ b/templates/add_operation.html
@@ -1,4 +1,4 @@
-{% extends 'base1.html' %}
+{% extends 'base.html' %}
 
 
 {% block title %}
@@ -6,10 +6,9 @@ Add operation
 {% endblock %}
 
 
-{% block body %}
+{% block main %}
 
-<div class="container-fluid-mt-5 px-4">
-    <div class="row" style="background-color: #f1f1f1; border:1px solid red; height:100vh">
+
         <div class="col-md-9">
             <div class="form-group">
                 <h2 id="2">Введите операцию</h2>
@@ -21,7 +20,7 @@ Add operation
 
 
 
-                    <input type="submit" class="btn btn-primary" value="Отправить">
+                    <input type="submit" class="btn btn-outline-secondary" value="Отправить">
 
                 </form>
 
@@ -33,11 +32,7 @@ Add operation
 
 
         </div>
-    </div>
-</div>
-
-</div>
-
+ 
 <!------------------------------------------------------------------------------->
 
 
