--- a/templates/sign_in.html
+++ b/templates/sign_in.html
@@ -1,4 +1,4 @@
-{% extends 'base1.html' %}
+{% extends 'base.html' %}
 
 
 {% block title %}
@@ -6,10 +6,9 @@ Sign in
 {% endblock %}
 
 
-{% block body %}
+{% block main %}
 
-<div class="container">
-  <div class="row">
+
     <div class="col-md-4">
 
       <h1>Авторизация</h1>
@@ -27,7 +26,7 @@ Sign in
           <input class="form-control" type="password" name="password">
         </div>
 <br>
-        <button type="submit" class="btn btn-primary">Войти</button>
+        <button type="submit" class="btn btn-outline-secondary">Войти</button>
 
       </form>
 
