--- a/templates/home.html
+++ b/templates/home.html
@@ -10,39 +10,75 @@ Home
 
 
 <style>
-
   .nav a {
     color: #333333 !important;
   }
+</style>
 
 
-
-
-
-
-.inner-title {
-	font-size: 60px;
-    line-height: 60px;
-    padding-left: 140px;
+<style>
+  .inner-title {
+   color: #353535;
+    font-size: 90px;
+    line-height: 70px;
+    padding-left: 200px;
     padding-top: 70px;
+  }
+    .inner-title p{
+    letter-spacing: 4.3px;
+  }
+
+  .img {
+    position: relative;
+    overflow: hidden;
+    z-index: -1;
+    width: 97%;
+    height: 85vh;
+    /* border: 1px solid grey;*/
+  }
+
+  .img img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-35%, -38%) scale(-1, 1);
+    /*display: none;*/
+    width: 115%;
+    height: auto;
+    object-fit: cover;
+  }
+
+  @media (max-width: 768px) {
+  .img img {
+    display: none;
+  }
+  .inner-title {
+    
+    font-size: 40px;
+    line-height: 25px;
+    padding-left:0;
+    padding-top: 0;
+  }
 }
 
-}
 </style>
 
 
 <div class="inner-title">
-Каталог
-			<span>дефектов</span>
+  <p>Каталог</p>
+  <span>дефектов</span>
 
-</div> 
+</div>
 
 {% endblock %}
 
 
 {% block main %}
 
-<div class="img"><img src="../static/img/logo/0.png" alt="">
-			</div>
+<div class="img">
+  <img src="../static/img/logo/4.jpg" alt="">
+</div>
+
+</div>
 
 {% endblock %}
