--- a/templates/add_catalog.html
+++ b/templates/add_catalog.html
@@ -7,28 +7,25 @@ Add
 
 
 {% block nav %}
-
+<style>
+  .nav a {
+    color: #333333 !important;
+  }
+</style>
 
 <!------------------------------------------------------------------------------->
-
 <div class="col">
-
-<ul class="list-group">
-          <li class="list-group-item">
-            <a class="nav-link" href="#">Введите данные по дефекту</a>
-          </li>
-            <li class="list-group-item">
-            <a class="nav-link" href="#">Введите наименование дефекта</a>
-			</li>
- 			<li class="list-group-item">
-           <a class="nav-link" href="#">Введите операцию</a>
-          </li>
- 			<li class="list-group-item">
-           <a class="nav-link" href="#">Введите информацию по изделию</a>
-          </li>
-        </ul>
-
+  <div class="scrollspy" data-mdb-spy="scroll" data-mdb-target=".list-group" data-mdb-offset="0"
+    style="position: relative;  height: calc(100vh - 25vh); overflow: auto;">
+    <nav class="nav flex-column  p-4">
+      <a class="nav-link" href="add_catalog">Введите данные по дефекту</a>
+      <a class="nav-link" href="add_defect">Введите наименование дефекта</a>
+      <a class="nav-link" href="add_operation">Введите операцию</a>
+      <a class="nav-link" href="add_product">Введите информацию по изделию</a>
+   </nav>
+  </div>
 </div>
+
 
 {% endblock %}
 {% block main %}
@@ -44,7 +41,7 @@ Add
                         {% for i in defect %}
                         <option value="{{ i.id }}">{{ i.defect_name }}</option>
                         {% endfor %}
-                        <option value="add_defect" style="background:green;">Добавить дефект</option>
+                        <option value="add_defect" style="color:#ff8111;">Добавить дефект</option>
                     </select><br>
 
 
@@ -64,7 +61,7 @@ Add
                         {% for i in product %}
                         <option>{{ i.general_name }}</option>
                         {% endfor %}
-                        <option value="add_product" style="background:green;">Добавить изделие</option>
+                        <option value="add_product" style="color:#ff8111;">Добавить изделие</option>
                     </select><br>
 
 
@@ -76,7 +73,7 @@ Add
                         {% for i in operation %}
                         <option>{{ i.operation_name }}</option>
                         {% endfor %}
-                        <option value="add_operation" style="background:green;">Добавить операцию</option>
+                        <option value="add_operation" style="color:#ff8111;">Добавить операцию</option>
                     </select><br>
 
 <!--
