--- a/templates/add_defect.html
+++ b/templates/add_defect.html
@@ -11,7 +11,7 @@ Add
 
 <!------------------------------------------------------------------------------->
 
-        <div class="col-md-9">
+        <div class="col-md-6">
             <div class="form-group">
                 <h2>Введите наименование дефекта</h2>
                {% with messages = get_flashed_messages(with_categories=true) %}
@@ -31,25 +31,30 @@ Add
                     <input type="submit" class="btn btn-outline-secondary" value="Отправить">
 
                 </form>
+            </div>
+        </div>
 <!---------------------------------------------------------------------------------------->
 
 <br>
 <br>
-<h2>Или выберите наименование дефекта для редактирования</h2>
+<div class="col-md-8">
+
+<h2>Или выберите наименование дефекта для редактирования или удаления</h2>
 <div class="tableFixHead">
   <table class="table table-hover">
     <thead>
-      <tr onclick="window.location.href='/defect'; return false">
+      <tr>
         <th scope="col">id</th>
         <th scope="col"> Зарегистрированные дефекты</th>
-        
+        <th scope="col"> Редактировать</th>
+		<th scope="col"> Удалить</th>
       </tr>
     </thead>
 
     <tbody>
 
       {% for i in defect %}
-      <tr>
+      <tr onclick="window.location.href='/defect/{{ i.id }}'; return false">
         <td>{{ i.id }}</td>
       	<td>{{ i.defect_name }}</td>
       {% endfor %}
@@ -60,47 +65,13 @@ Add
 
   </table>
 </div>
+</div>
 <!---------------------------------------------------------------------------------------->
 
-
-
-            </div>
-
-
-
-        </div>
- 
-<!------------------------------------------------------------------------------->
-
+      
 
 <script>
-    function getValue() {
-        let next = "#2"
-        let a = document.getElementById("form-select1");
-        //let b = a.value;
-        /*   if (a.selectedIndex != -1) {
-               //Если есть выбранный элемент, отобразить его значение (свойство value)
-               console.log(a.options[a.selectedIndex].text);
-           }*/
-
-        if (a.options[a.selectedIndex].value == "add_defect") {
-            document.location.href = "#2"//"#top"
-        } else if (a.options[a.selectedIndex].value == "add_operation") {
-            document.location.href = "#3"
-        } else if (a.options[a.selectedIndex].value == "add_product") {
-            document.location.href = "#4"
-        }
-    }
-
+    
 </script>
-<script>
-    function filesize() {
-        let file = document.getElementById("image").files[0].size;
-        console.log('fs=', file);
 
-        //let a = 'filesize'+'='+file;
-
-        document.cookie = 'filesize' + '=' + file;
-    }
-</script>
 {% endblock %}
